--- a/src/app/pages/general-documents/components/general-documents-list/general-documents-list.component.html
+++ b/src/app/pages/general-documents/components/general-documents-list/general-documents-list.component.html
@@ -1,1 +1,7 @@
-<p>general-documents-list works! Hola mundo</p>
+<iframe
+        src="https://scr.sunarp.gob.pe/repositorio/publicaciones/compendios-registrales/libro%20comentarios.pdf"
+        title="Vista previa"
+        allowfullscreen
+        [allowFullscreen]="true"
+        class="iframe-doc"
+></iframe>
