--- a/src/app/shared/components/layout/layout.component.html
+++ b/src/app/shared/components/layout/layout.component.html
@@ -1,30 +1,83 @@
 <div class="toolbar">
     <div class="color-toolbar">
-        <div class="title-toolbar">SISTEMA INTEGRADO DE GESTIÓN</div>
-        <div class="cont-log">
-            <button>Login</button>
+        <div class="title-toolbar" (click)="goInicio()">SISTEMA INTEGRADO DE GESTIÓN</div>
+        <div class="cont-log" *ngIf="!userLog">
+            <button (click)="openLogin()">Login</button>
+        </div>
+        <div *ngIf="userLog" class="cont-user-log">
+            <div class="cont-info">
+                <div>Usuario:</div>
+                <div>{{userLog.user}}</div>
+            </div>
+            <div class="cont-info">
+                <div>Rol:</div>
+                <div>{{userLog.rol}}</div>
+            </div>
         </div>
     </div>
 
 </div>
 <mat-drawer-container class="matdrawner-container" autosize>
-    <mat-drawer #drawer class="matdrawner-sidenav" mode="side" [opened]="true">
+    <mat-drawer #drawer class="matdrawner-sidenav" mode="side" [opened]="openedDrawner">
         <!-- <p>Auto-resizing sidenav</p>
         <p *ngIf="showFiller">Lorem, ipsum dolor sit amet consectetur.</p>
         <button (click)="showFiller = !showFiller" mat-raised-button>
             Toggle extra text
         </button> -->
-        <div class="title-sidenav">INFORMACIÓN DOCUMENTARIA</div>
-        <a mat-list-item routerLink="/generalDocuments" [queryParams]="{ section: 'menu' }">
+
+        <!-- <a mat-list-item routerLink="/generalDocuments" [queryParams]="{ section: 'menu' }">
             Documentos Generales
-        </a>
+        </a> -->
+        <div class="container-nav-routes" *ngIf="datanav.length">
+            <div *ngFor="let nav of datanav">
+                <div class="title-option-nav">{{nav.title}}</div>
+                <div class="routes-options">
+                    <div *ngFor="let route of nav.routes" class="op-route">
+                        <div class="circle"></div>
+                        <div class="text-route" [routerLink]="route.url" routerLinkActive="active-router">{{route.name}}</div>
+                    </div>
+                    <div class="op-route">
+                        <div class="circle"></div>
+                        <div class="text-route">Salir</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div *ngIf="!datanav.length">
+            <div class="title-sidenav">INFORMACIÓN DOCUMENTARIA</div>
+            <mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="example-tree">
+
+                <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
+                    <div *ngIf="!node.url && !node.autorization">{{node.name}}</div>
+                    <div *ngIf="node.autorization" (click)="callModal()">{{node.name}}</div>
+                    <a *ngIf="node.url" href="{{node.url}}" target="_blank">{{node.name}}</a>
+                </mat-tree-node>
+
+                <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
+                    <div class="mat-tree-node">
+                        <button mat-icon-button matTreeNodeToggle [attr.aria-label]="'Toggle ' + node.name">
+                            <mat-icon class="mat-icon-rtl-mirror">
+                                {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
+                            </mat-icon>
+                        </button>
+                        {{node.name}}
+                    </div>
+                    <div [class.example-tree-invisible]="!treeControl.isExpanded(node)" role="group">
+                        <ng-container matTreeNodeOutlet></ng-container>
+                    </div>
+                </mat-nested-tree-node>
+            </mat-tree>
+        </div>
     </mat-drawer>
 
     <div class="matdrawner-sidenav-content">
-        <router-outlet></router-outlet>
+        <router-outlet *ngIf="!showOptions"></router-outlet>
         <!-- <button type="button" mat-button (click)="drawer.toggle()">
             Toggle sidenav
         </button> -->
+        <app-options-gestion *ngIf="showOptions" (onSelectedOption)="SelectedOption($event)"></app-options-gestion>
     </div>
+
+
 
 </mat-drawer-container>
