--- a/src/app/pages/administration/components/officers/officers.component.html
+++ b/src/app/pages/administration/components/officers/officers.component.html
@@ -1,1 +1,60 @@
 <div class="container-title">Gestión de Oficiales</div>
+<div *ngIf="!showForm">
+    <div class="container-btn-right">
+        <button (click)="showForm = true;formOfficer.reset();">Agregar</button>
+    </div>
+
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+        <ng-container matColumnDef="code">
+            <th mat-header-cell *matHeaderCellDef> Código </th>
+            <td mat-cell *matCellDef="let element"> {{element.code}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef> Nombre </th>
+            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="state">
+            <th mat-header-cell *matHeaderCellDef> Estado </th>
+            <td mat-cell *matCellDef="let element">
+                <mat-checkbox [checked]="element.state" [color]="'primary'" disabled="disabled"></mat-checkbox>
+            </td>
+        </ng-container>
+
+        <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef> Acciones </th>
+            <td mat-cell *matCellDef="let element;let i = index">
+                <button mat-icon-button (click)="edit(element,i)">
+                    <mat-icon>edit</mat-icon>
+                </button>
+            </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+</div>
+
+<form [formGroup]="formOfficer" *ngIf="showForm" class="form-standart">
+    <mat-form-field appearance="outline">
+        <mat-label>Código</mat-label>
+        <input matInput placeholder="Placeholder" formControlName="code">
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+        <mat-label>Nombre</mat-label>
+        <input matInput placeholder="Placeholder" formControlName="name">
+    </mat-form-field>
+
+    <div class="cont-slide-tooggle">
+        <mat-slide-toggle [color]="'primary'" formControlName="state">
+            Estado
+        </mat-slide-toggle>
+    </div>
+
+    <div class="container-btn-save">
+        <button (click)="save()" type="button" [disabled]="!formOfficer.valid">Guardar</button>
+        <button (click)="showForm = false" type="button">Atras</button>
+    </div>
+</form>
