agregado de componentes procesos y reportes, enrutado

--- a/src/app/shared/components/layout/layout.component.html
+++ b/src/app/shared/components/layout/layout.component.html
@@ -19,7 +19,8 @@
                 </div> -->
             </div>
             <div (click)="logout()">
-                <mat-icon>logout</mat-icon>
+                <mat-icon matTooltip="Cerrar Sesión"
+                aria-label="Boton para Cerrar Sesión">logout</mat-icon>
             </div>
         </div>
 
