--- a/src/app/pages/processes/components/record-findings/record-findings.component.html
+++ b/src/app/pages/processes/components/record-findings/record-findings.component.html
@@ -1,1 +1,14 @@
 <div class="container-title">Registro de Hallazgos</div>
+
+<mat-tab-group class="mat-tab-sunarp">
+    <mat-tab label="Listado de Acciones">
+        <div class="cont-p">
+            <app-list-actions ></app-list-actions>
+        </div>
+    </mat-tab>
+    <mat-tab label="Solicitud de Acción">
+        <div class="cont-p">
+            <app-action-request class="cont-p"></app-action-request>
+        </div>
+    </mat-tab>
+</mat-tab-group>
