--- a/src/app/pages/processes/components/record-findings/list-actions/list-actions.component.scss
+++ b/src/app/pages/processes/components/record-findings/list-actions/list-actions.component.scss
@@ -24,7 +24,7 @@
         padding-bottom: 0;
     }
 
-    button {
+    .btn-search {
         padding         : 5px 20px;
         background-color: #ffffff;
         border          : 1px solid #44acab;
