--- a/src/app/pages/administration/components/sources/sources.component.html
+++ b/src/app/pages/administration/components/sources/sources.component.html
@@ -4,43 +4,45 @@
         <button (click)="showForm = true;formSource.reset();">Agregar</button>
     </div>
 
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-        <ng-container matColumnDef="code">
-            <th mat-header-cell *matHeaderCellDef> Código </th>
-            <td mat-cell *matCellDef="let element"> {{element.code}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="description">
-            <th mat-header-cell *matHeaderCellDef> Descripción </th>
-            <td mat-cell *matCellDef="let element"> {{element.description}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="corrective">
-            <th mat-header-cell *matHeaderCellDef> Correctiva </th>
-            <td mat-cell *matCellDef="let element">
-                <mat-checkbox [checked]="element.corrective" [color]="'primary'" disabled="disabled"></mat-checkbox>
-            </td>
-        </ng-container>
-
-        <ng-container matColumnDef="upgrade">
-            <th mat-header-cell *matHeaderCellDef> Oportunidad de Mejora </th>
-            <td mat-cell *matCellDef="let element">
-                <mat-checkbox [checked]="element.upgrade" [color]="'primary'" disabled="disabled"></mat-checkbox>
-            </td>
-        </ng-container>
-
-        <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef> Acciones </th>
-            <td mat-cell *matCellDef="let element;let i = index">
-                <button mat-icon-button (click)="edit(element,i)">
-                    <mat-icon>edit</mat-icon>
-                </button>
-            </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+    <div class="container-responsible-table">
+        <table mat-table [dataSource]="dataSource" class="table-standart">
+            <ng-container matColumnDef="code">
+                <th mat-header-cell *matHeaderCellDef> Código </th>
+                <td mat-cell *matCellDef="let element"> {{element.code}} </td>
+            </ng-container>
+    
+            <ng-container matColumnDef="description">
+                <th mat-header-cell *matHeaderCellDef> Descripción </th>
+                <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+            </ng-container>
+    
+            <ng-container matColumnDef="corrective">
+                <th mat-header-cell *matHeaderCellDef> Correctiva </th>
+                <td mat-cell *matCellDef="let element">
+                    <mat-checkbox [checked]="element.corrective" [color]="'primary'" disabled="disabled"></mat-checkbox>
+                </td>
+            </ng-container>
+    
+            <ng-container matColumnDef="upgrade">
+                <th mat-header-cell *matHeaderCellDef> Oportunidad de Mejora </th>
+                <td mat-cell *matCellDef="let element">
+                    <mat-checkbox [checked]="element.upgrade" [color]="'primary'" disabled="disabled"></mat-checkbox>
+                </td>
+            </ng-container>
+    
+            <ng-container matColumnDef="actions">
+                <th mat-header-cell *matHeaderCellDef> Acciones </th>
+                <td mat-cell *matCellDef="let element;let i = index">
+                    <button mat-icon-button (click)="edit(element,i)">
+                        <mat-icon>edit</mat-icon>
+                    </button>
+                </td>
+            </ng-container>
+    
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+    </div>
 </div>
 
 <form [formGroup]="formSource" *ngIf="showForm" class="form-standart">
