--- a/src/app/pages/processes/components/record-findings/record-findings.component.html
+++ b/src/app/pages/processes/components/record-findings/record-findings.component.html
@@ -8,7 +8,7 @@
     </mat-tab>
     <mat-tab label="Solicitud de Acción">
         <div class="cont-p">
-            <app-action-request class="cont-p"></app-action-request>
+            <app-action-request></app-action-request>
         </div>
     </mat-tab>
 </mat-tab-group>
