--- a/src/app/shared/components/layout/layout.component.html
+++ b/src/app/shared/components/layout/layout.component.html
@@ -28,7 +28,7 @@
     </div>
 
 </div>
-<mat-drawer-container class="matdrawner-container" autosize>
+<mat-drawer-container class="matdrawner-container-ly" autosize>
     <mat-drawer #drawer class="matdrawner-sidenav" mode="side" [opened]="openedDrawner">
         <!-- <p>Auto-resizing sidenav</p>
         <p *ngIf="showFiller">Lorem, ipsum dolor sit amet consectetur.</p>
@@ -56,12 +56,12 @@
             <mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="example-tree">
 
                 <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
-                    <div *ngIf="!node.url && !node.autorization">{{node.name}}</div>
+                    <div *ngIf="!node.url && !node.autorization">{{node.name}}dddd</div>
                     <div *ngIf="node.autorization" (click)="callModal()">{{node.name}}</div>
                     <a *ngIf="node.url" href="{{node.url}}" target="_blank">{{node.name}}</a>
                 </mat-tree-node>
 
-                <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
+                <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild" matTreeNodeToggle style="cursor: pointer;">
                     <div class="mat-tree-node">
                         <button mat-icon-button matTreeNodeToggle [attr.aria-label]="'Toggle ' + node.name">
                             <mat-icon class="mat-icon-rtl-mirror">
