--- a/src/app/shared/components/modal-msg/modal-msg.component.scss
+++ b/src/app/shared/components/modal-msg/modal-msg.component.scss
@@ -1,36 +1,101 @@
 .modal-msg {
-    width           : 100%;
-    background-color: #2c3f3e;
-    padding         : 15px;
-    box-sizing      : border-box;
-    position        : relative;
+    width          : 100%;
+    padding        : 15px;
+    box-sizing     : border-box;
+    position       : relative;
+    border-left    : 8px solid #bababa;
+    font-size      : 16px;
+    display        : flex;
+    align-items    : center;
+    justify-content: space-between;
+    gap            : 10px;
+    flex-wrap      : wrap;
 
-    .layer-1 {
-        background-color: #8cc434;
-        padding         : 20px;
+    .text-icon {
+        width      : 80%;
+        display    : flex;
+        gap        : 10px;
+        align-items: center;
+
+        mat-icon {
+            width    : 20px;
+            height   : 20px;
+            font-size: 20px;
+        }
     }
 
-    .layer-2 {
-        border     : 1px solid #ffffff;
-        padding    : 50px 80px;
-        color      : #ffffff;
-        font-size  : 25px;
-        line-height: initial;
-        font-weight: 500;
-        text-align : justify;
+    .ic-close-md {
+        width          : 20px;
+        height         : 20px;
+        border         : 3px solid #bababa;
+        border-radius  : 50%;
+        display        : flex;
+        align-items    : center;
+        flex-wrap      : wrap;
+        justify-content: center;
+        box-sizing     : border-box;
+        cursor         : pointer;
+        opacity        : 0.8;
+
+        mat-icon {
+            width      : 12px;
+            height     : 12px;
+            font-size  : 12px;
+            font-weight: 900;
+        }
     }
 
-    .btn-close {
-        background-color: #e43424;
-        color           : #ffffff;
-        padding         : 5px 30px;
-        border          : none;
-        border-radius   : 5px;
-        text-align      : center;
-        position        : absolute;
-        top             : 0;
-        right           : 15px;
-        font-size       : 20px;
-        cursor          : pointer;
+    .ic-close-md:hover {
+        opacity: 1;
+    }
+
+    &--success {
+        border-color: #2ed573;
+        background  : #c3f3d7;
+        color       : #23ad5c;
+
+        .ic-close-md {
+            border: 3px solid #23ad5c;
+        }
+    }
+
+    &--info {
+        border-color: #71c9ff;
+        background  : #d7f0ff;
+        color       : #3eb6ff;
+
+        .ic-close-md {
+            border: 3px solid #3eb6ff;
+        }
+    }
+
+    &--warning {
+        border-color: #ffa502;
+        background  : #ffdb9b;
+        color       : #ce8500;
+
+        .ic-close-md {
+            border: 3px solid #ce8500;
+        }
+    }
+
+    &--danger {
+        border-color: #ff4757;
+        background  : #ffe0e3;
+        color       : #ff4757;
+
+        .ic-close-md {
+            border: 3px solid #ff4757;
+        }
+    }
+
+    &--dark {
+        border-color: #333;
+        background  : #4d4d4d;
+        color       : #ccc;
+
+        .ic-close-md {
+            border: 3px solid #ccc;
+        }
     }
 }
