--- a/src/app/pages/processes/components/record-findings/action-request/action-request.component.scss
+++ b/src/app/pages/processes/components/record-findings/action-request/action-request.component.scss
@@ -1,9 +1,15 @@
+:host {
+    display        : flex;
+    justify-content: center;
+}
+
 ::ng-deep .form-register {
     display        : flex;
     flex-wrap      : wrap;
     gap            : 15px;
     justify-content: center;
     padding        : 0 20px;
+    width          : 100%;
 
     .mat-form-field-wrapper {
         padding-bottom: 0;
@@ -36,6 +42,13 @@
             padding: 0 100px;
         }
     }
+
+    @media (min-width: 1440px) {
+        & {
+            max-width: 832px;
+        }
+    }
+
 }
 
 ::ng-deep .inp-label {
