add change size msg

--- a/src/app/shared/components/modal-msg/modal-msg.component.scss
+++ b/src/app/shared/components/modal-msg/modal-msg.component.scss
@@ -10,6 +10,7 @@
     justify-content: space-between;
     gap            : 10px;
     flex-wrap      : wrap;
+    height         : 100%;
 
     .text-icon {
         width      : 80%;
