--- a/src/app/shared/components/layout/layout.component.html
+++ b/src/app/shared/components/layout/layout.component.html
@@ -56,7 +56,7 @@
             <mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="example-tree">
 
                 <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
-                    <div *ngIf="!node.url && !node.autorization">{{node.name}}dddd</div>
+                    <div *ngIf="!node.url && !node.autorization">{{node.name}}</div>
                     <div *ngIf="node.autorization" (click)="callModal()">{{node.name}}</div>
                     <a *ngIf="node.url" href="{{node.url}}" target="_blank">{{node.name}}</a>
                 </mat-tree-node>
