cambio en url de options, agregado de iconos, documentacion de codigo layout

--- a/src/app/pages/general-documents/components/general-documents-list/general-documents-list.component.html
+++ b/src/app/pages/general-documents/components/general-documents-list/general-documents-list.component.html
@@ -1,5 +1,5 @@
 <iframe
-        src="https://scr.sunarp.gob.pe/repositorio/publicaciones/compendios-registrales/libro%20comentarios.pdf"
+        [src]="urlDoc | safe"
         title="Vista previa"
         allowfullscreen
         [allowFullscreen]="true"
