--- a/src/app/pages/processes/components/authorization-register/list-actions-authorization/list-actions-authorization.component.html
+++ b/src/app/pages/processes/components/authorization-register/list-actions-authorization/list-actions-authorization.component.html
@@ -1,1 +1,14 @@
-<p>list-actions-authorization works!</p>
+<div class="cont-buscar" [formGroup]="formSearchActions">
+    <div class="lable-cont">Buscar</div>
+    <app-datepicker-year (onGetValue)="getYear($event)" [width]="'200'"></app-datepicker-year>
+    <mat-form-field appearance="outline">
+        <input matInput formControlName="state" placeholder="Estado">
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+        <mat-label>Area</mat-label>
+        <mat-select formControlName="area">
+          <mat-option *ngFor="let area of areas" [value]="area.id">{{area.name}}</mat-option>
+        </mat-select>
+    </mat-form-field>
+    <button (click)="search()" type="button" class="btn-search">Buscar</button>
+</div>
