--- a/src/app/shared/components/layout/layout.component.scss
+++ b/src/app/shared/components/layout/layout.component.scss
@@ -4,9 +4,11 @@
 
     .color-toolbar {
         display        : flex;
-        justify-content: space-between;
+        flex-wrap      : wrap;
+        justify-content: center;
         align-items    : center;
         padding        : 20px;
+        gap            : 15px;
 
         .title-toolbar {
             color      : #ffffff;
@@ -35,7 +37,7 @@
     border: 1px solid rgba(0, 0, 0, 0.5);
 
     .mat-drawer-content {
-        height: 100%;
+        height       : 100%;
         margin-bottom: 150px;
     }
 }
@@ -160,6 +162,21 @@
     padding-left: 40px;
 }
 
+.mat-tree-node:hover {
+    background-color: rgba(0, 0, 0, 0.04);
+}
+
+.op-tree-node {
+    display    : flex;
+    align-items: center;
+    gap        : 10px;
+
+    img {
+        width : 20px;
+        height: 20px;
+    }
+}
+
 .container-nav-routes {
     display  : flex;
     flex-wrap: wrap;
@@ -207,4 +224,16 @@
 .active-router {
     background-color: #3c9ca4;
     color           : #ffffff;
+}
+
+.active-tree {
+    background-color: rgba(0, 0, 0, 0.04);
+}
+
+@media (min-width: 629px) {
+    .toolbar {
+        .color-toolbar {
+            justify-content: space-between;
+        }
+    }
 }
