quitado de autorizacion en las opciones del navbar izquierdo

--- a/src/app/shared/components/layout/layout.component.html
+++ b/src/app/shared/components/layout/layout.component.html
@@ -56,8 +56,8 @@
             <mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="example-tree">
 
                 <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle [ngClass]="{'active-tree': idTreeNode === node.id}">
-                    <div *ngIf="!node.url && !node.autorization">{{node.name}}</div>
-                    <div *ngIf="node.autorization" (click)="goToDocument(node)" class="op-tree-node">
+                    <!-- <div *ngIf="!node.url && !node.autorization">{{node.name}}</div> -->
+                    <div  (click)="goToDocument(node)" class="op-tree-node">
                         <div><img src="assets/images/ic-pdf-img.png" alt="icon-pdf"></div>
                         {{node.name}}
                     </div>
