--- a/src/app/pages/administration/components/states/states.component.scss
+++ b/src/app/pages/administration/components/states/states.component.scss
@@ -1,3 +1,14 @@
-:host{
+:host {
     width: 100%;
+}
+
+.table-state {
+    width: 946px;
+
+    @media (min-width: 1024px) {
+        & {
+            width: 100%;
+        }
+    }
+
 }
