--- a/src/app/pages/administration/components/types/types.component.html
+++ b/src/app/pages/administration/components/types/types.component.html
@@ -4,30 +4,43 @@
         <button (click)="showForm = true;formType.reset();">Agregar</button>
     </div>
 
-    <div class="container-responsible-table">
+    <div class="container-responsible-table" [formGroup]="formType" #tbtypes>
         <table mat-table [dataSource]="dataSource" class="table-standart">
             <ng-container matColumnDef="code">
                 <th mat-header-cell *matHeaderCellDef> Código </th>
-                <td mat-cell *matCellDef="let element"> {{element.code}} </td>
+                <td mat-cell *matCellDef="let element;let i = index"> 
+                    <div *ngIf="indexSelectedRow !== i">{{element.code}}</div> 
+                    <div class="inpt-row" *ngIf="editActive && indexSelectedRow === i">
+                        <input type="text" formControlName="code">
+                    </div>
+                </td>
             </ng-container>
     
             <ng-container matColumnDef="description">
                 <th mat-header-cell *matHeaderCellDef> Descripción </th>
-                <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+                <td mat-cell *matCellDef="let element;let i = index"> 
+                    <div *ngIf="indexSelectedRow !== i">{{element.description}}</div> 
+                    <div class="inpt-row" *ngIf="editActive && indexSelectedRow === i">
+                        <input type="text" formControlName="description">
+                    </div>
+                </td>
             </ng-container>
-    
-            <ng-container matColumnDef="actions">
-                <th mat-header-cell *matHeaderCellDef> Acciones </th>
-                <td mat-cell *matCellDef="let element;let i = index">
-                    <button mat-icon-button (click)="edit(element,i)">
-                        <mat-icon>edit</mat-icon>
-                    </button>
+
+            <ng-container matColumnDef="noResults">
+                <td mat-footer-row *matFooterCellDef [colSpan]="displayedColumns.length">
+                    No se encontraron resultados.
                 </td>
             </ng-container>
     
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;let i = index" (dblclick)="selectedRow(row,i)" [ngClass]="{'active-row-table': indexSelectedRow == i}"></tr>
+            <tr mat-footer-row [hidden]="dataSource.data.length > 0 || emptyResult" *matFooterRowDef="['noResults']"></tr>
         </table>
+    </div>
+    <div class="container-btn-save">
+        <button>Añadir</button>
+        <button (click)="edit()" [disabled]="!editActive">Modificar</button>
+        <button>Grabar</button>
     </div>
 </div>
 
