--- a/src/app/pages/administration/components/officers/officers.component.html
+++ b/src/app/pages/administration/components/officers/officers.component.html
@@ -1,8 +1,8 @@
 <div class="container-title">Gestión de Oficiales</div>
 <div *ngIf="!showForm">
-    <div class="container-btn-right">
+    <!-- <div class="container-btn-right">
         <button (click)="showForm = true;formOfficer.reset();">Agregar</button>
-    </div>
+    </div> -->
 
     <div class="container-responsible-table" [formGroup]="formOfficer" #tbofficer>
         <table mat-table [dataSource]="dataSource" class="table-standart">
@@ -10,9 +10,7 @@
                 <th mat-header-cell *matHeaderCellDef> Código </th>
                 <td mat-cell *matCellDef="let element;let i = index"> 
                     <div *ngIf="indexSelectedRow !== i">{{element.code}}</div> 
-                    <div class="inpt-row" *ngIf="editActive && indexSelectedRow === i">
-                        <input type="text" formControlName="code">
-                    </div>
+                    <input class="inpt-row" *ngIf="editActive && indexSelectedRow === i" type="text" formControlName="code">
                 </td>
             </ng-container>
     
@@ -20,9 +18,7 @@
                 <th mat-header-cell *matHeaderCellDef> Nombre </th>
                 <td mat-cell *matCellDef="let element;let i = index"> 
                     <div *ngIf="indexSelectedRow !== i">{{element.name}} </div>
-                    <div class="inpt-row" *ngIf="editActive && indexSelectedRow === i">
-                        <input type="text" formControlName="name">
-                    </div>
+                    <input class="inpt-row" *ngIf="editActive && indexSelectedRow === i" type="text" formControlName="name">
                 </td>
             </ng-container>
     
@@ -30,9 +26,7 @@
                 <th mat-header-cell *matHeaderCellDef> Estado </th>
                 <td mat-cell *matCellDef="let element;let i = index">
                     <mat-checkbox *ngIf="indexSelectedRow !== i" [checked]="element.state" [color]="'primary'" disabled="disabled"></mat-checkbox>
-                    <div class="inpt-row" *ngIf="editActive && indexSelectedRow === i">
-                        <mat-checkbox [checked]="element.state" [color]="'primary'" formControlName="state"></mat-checkbox>
-                    </div>
+                    <mat-checkbox *ngIf="editActive && indexSelectedRow === i" [checked]="element.state" [color]="'primary'" formControlName="state"></mat-checkbox>
                 </td>
             </ng-container>
 
@@ -48,7 +42,7 @@
         </table>
     </div>
     <div class="container-btn-save">
-        <button>Añadir</button>
+        <button (click)="add()">Añadir</button>
         <button (click)="edit()" [disabled]="!editActive">Modificar</button>
         <button>Grabar</button>
     </div>
