--- a/src/app/pages/administration/components/states/states.component.html
+++ b/src/app/pages/administration/components/states/states.component.html
@@ -10,9 +10,7 @@
                 <th mat-header-cell *matHeaderCellDef> Código </th>
                 <td mat-cell *matCellDef="let element;let i = index">
                     <div *ngIf="indexSelectedRow !== i">{{element.code}} </div> 
-                    <div class="inpt-row" *ngIf="editActive && indexSelectedRow === i">
-                        <input type="text" formControlName="code">
-                    </div>
+                    <input class="inpt-row" *ngIf="editActive && indexSelectedRow === i" type="text" formControlName="code">
                 </td>
             </ng-container>
 
@@ -20,9 +18,7 @@
                 <th mat-header-cell *matHeaderCellDef> Nombre </th>
                 <td mat-cell *matCellDef="let element;let i = index"> 
                     <div *ngIf="indexSelectedRow !== i"> {{element.name}} </div> 
-                    <div class="inpt-row" *ngIf="editActive && indexSelectedRow === i">
-                        <input type="text" formControlName="name">
-                    </div>
+                    <input class="inpt-row" *ngIf="editActive && indexSelectedRow === i" type="text" formControlName="name">
                 </td>
             </ng-container>
 
