--- a/src/app/pages/administration/components/types/types.component.html
+++ b/src/app/pages/administration/components/types/types.component.html
@@ -10,9 +10,7 @@
                 <th mat-header-cell *matHeaderCellDef> Código </th>
                 <td mat-cell *matCellDef="let element;let i = index"> 
                     <div *ngIf="indexSelectedRow !== i">{{element.code}}</div> 
-                    <div class="inpt-row" *ngIf="editActive && indexSelectedRow === i">
-                        <input type="text" formControlName="code">
-                    </div>
+                    <input class="inpt-row" *ngIf="editActive && indexSelectedRow === i" type="text" formControlName="code">
                 </td>
             </ng-container>
     
@@ -20,9 +18,7 @@
                 <th mat-header-cell *matHeaderCellDef> Descripción </th>
                 <td mat-cell *matCellDef="let element;let i = index"> 
                     <div *ngIf="indexSelectedRow !== i">{{element.description}}</div> 
-                    <div class="inpt-row" *ngIf="editActive && indexSelectedRow === i">
-                        <input type="text" formControlName="description">
-                    </div>
+                    <input class="inpt-row" *ngIf="editActive && indexSelectedRow === i" type="text" formControlName="description">
                 </td>
             </ng-container>
 
