--- a/src/app/shared/components/layout/layout.component.scss
+++ b/src/app/shared/components/layout/layout.component.scss
@@ -44,7 +44,7 @@
 
 .matdrawner-sidenav-content {
     display   : flex;
-    height    : 100%;
+    //height    : 100%;
     padding   : 20px 10px 0 10px;
     box-sizing: border-box;
 }
