--- a/src/app/pages/reports/components/by-state-reporting/by-state-reporting.component.html
+++ b/src/app/pages/reports/components/by-state-reporting/by-state-reporting.component.html
@@ -1,1 +1,8 @@
 <div class="container-title">Reporte por Estados</div>
+
+<iframe
+title="Vista previa" 
+allowfullscreen="" 
+class="iframe-doc"
+src="assets/pdfs/Doc1.pdf">
+</iframe>
