--- a/src/app/pages/reports/components/follow-up-report/follow-up-report.component.html
+++ b/src/app/pages/reports/components/follow-up-report/follow-up-report.component.html
@@ -1,1 +1,8 @@
 <div class="container-title">Reportes de Seguimiento</div>
+
+<iframe
+title="Vista previa" 
+allowfullscreen="" 
+class="iframe-doc"
+src="assets/pdfs/Doc2.pdf">
+</iframe>
