--- a/src/app/pages/reports/components/general-report/general-report.component.html
+++ b/src/app/pages/reports/components/general-report/general-report.component.html
@@ -1,1 +1,9 @@
 <div class="container-title">Reportes Generales</div>
+
+<iframe
+title="Vista previa" 
+height="100%" width="100%"
+allowfullscreen="" 
+class="iframe-doc"
+src="assets/pdfs/Doc3.pdf">
+</iframe>
