--- a/src/app/pages/processes/components/share-register/follow-up-share/follow-up-share.component.html
+++ b/src/app/pages/processes/components/share-register/follow-up-share/follow-up-share.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="formUpAction" class="form-register">
+<form [formGroup]="formUpShare" class="form-register">
 
     <div class="inp-label">
         <div class="label">Nro:</div>
@@ -44,6 +44,6 @@
     </mat-form-field>
 
     <div class="container-btn-save">
-        <button (click)="next()" type="button" [disabled]="!formUpAction.valid">Siguiente</button>
+        <button (click)="next()" type="button" [disabled]="!formUpShare.valid">Siguiente</button>
     </div>
 </form>
