--- a/src/app/pages/processes/components/share-register/share-register.component.html
+++ b/src/app/pages/processes/components/share-register/share-register.component.html
@@ -1,1 +1,28 @@
 <div class="container-title">Registro de Acciones</div>
+<mat-tab-group class="mat-tab-sunarp" [(selectedIndex)]="indexTab">
+    <mat-tab label="Listado de Acciones">
+        <div class="cont-p">
+            <app-list-actions-share (onNext)="changeTab($event)"></app-list-actions-share>
+        </div>
+    </mat-tab>
+    <mat-tab label="Solicitud de Acción">
+        <div class="cont-p">
+            <app-action-request-share (onNext)="changeTab($event)"></app-action-request-share>
+        </div>
+    </mat-tab>
+    <mat-tab label="Registro del Plan de Acción" [disabled]="!totalTabs.includes(2)">
+        <div class="cont-p">
+           <app-action-plan-share (onNext)="changeTab($event)"></app-action-plan-share>
+        </div>
+    </mat-tab>
+    <mat-tab label="Seguimiento de Acción" [disabled]="!totalTabs.includes(3)">
+        <div class="cont-p">
+            <app-follow-up-share (onNext)="changeTab($event)"></app-follow-up-share>
+        </div>
+    </mat-tab>
+    <mat-tab label="Verificación de Eficacia" [disabled]="!totalTabs.includes(4)">
+        <div class="cont-p">
+       <app-efficacy-verification-share></app-efficacy-verification-share>
+        </div>
+    </mat-tab>
+</mat-tab-group>
