--- a/src/styles.scss
+++ b/src/styles.scss
@@ -100,6 +100,10 @@ body {
         color: #ffffff;
     }
 
+    .mat-tab-disabled {
+        opacity: 0.5;
+    }
+
     .mat-ink-bar{
         display: none;
     }
@@ -148,5 +152,39 @@ body {
 .inpt-row{ 
     &:focus{
         outline: none;
+    }
+}
+
+.cont-buscar {
+    margin-top   : 25px;
+    display      : flex;
+    flex-wrap    : wrap;
+    align-items  : center;
+    border       : 1px solid #44acab;
+    margin-bottom: 20px;
+    width        : 100%;
+    max-width    : 400px;
+    position     : relative;
+    padding      : 10px;
+    gap          : 25px;
+
+    .lable-cont {
+        position        : absolute;
+        top             : -10px;
+        left            : 5px;
+        padding         : 0 15px 0 5px;
+        background-color: #fafafa;
+        font-weight     : 500;
+    }
+
+    .mat-form-field-wrapper {
+        padding-bottom: 0;
+    }
+
+    .btn-search {
+        padding         : 5px 20px;
+        background-color: #ffffff;
+        border          : 1px solid #44acab;
+        cursor          : pointer;
     }
 }
