agregado de modulos y componentes de opcion indicadores de calidad

--- a/src/app/pages/options/components/sgc-iso/sgc-iso.component.html
+++ b/src/app/pages/options/components/sgc-iso/sgc-iso.component.html
@@ -8,7 +8,7 @@
                 </div>
             </div>
         </div>
-        <div class="layer1">
+        <div class="layer1" (click)="setIdOption('1002')">
             <div class="layer2">
                 <div class="layer3">
                     <div>Indicadores de Calidad</div>
