--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,7 +12,7 @@ body {
 
 .container-title {
     font-size       : 20px;
-    background-color: #2c3f3e;
+    background-color: #3D4B49;
     color           : #ffffff;
     width           : 100%;
     padding         : 10px 30px;
@@ -44,7 +44,7 @@ body {
 
     button {
         border          : none;
-        background-color: #2c3f3e;
+        background-color: #3D4B49;
         color           : #ffffff;
         padding         : 10px 25px;
         border-radius   : 5px;
