--- a/src/app/pages/administration/components/types/types.component.html
+++ b/src/app/pages/administration/components/types/types.component.html
@@ -1,8 +1,8 @@
 <div class="container-title">Gestión de Tipos</div>
 <div *ngIf="!showForm">
-    <div class="container-btn-right">
+    <!-- <div class="container-btn-right">
         <button (click)="showForm = true;formType.reset();">Agregar</button>
-    </div>
+    </div> -->
 
     <div class="container-responsible-table" [formGroup]="formType" #tbtypes>
         <table mat-table [dataSource]="dataSource" class="table-standart">
